# nakumios

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
archiso/: pacman.conf  profiledef.sh
archiso/airootfs/etc/systemd/system/: nakumi-session@.service
docs/: RELEASE_NOTES.md  generate-readme.sh
live-build-config/: binary.hybrid.iso.zsync.xz  chroot.packages.live  wget-log  wget-log.1  wget-log.2  wget-log.3  wget-log.4
live-build-config/auto/: config
live-build-config/config/hooks/normal/: 01-setup-user.chroot
live-build-config/config/includes.chroot/etc/greetd/: config.toml
live-build-config/config/includes.chroot/etc/polkit-1/rules.d/: 49-nakumi.rules
live-build-config/config/includes.chroot/etc/systemd/system/: nakumi-screenshot.service  nakumi-test-automation.service
live-build-config/config/includes.chroot/usr/share/applications/: nakumi-edit.desktop  nakumi-files.desktop  nakumi-launcher.desktop  nakumi-settings.desktop  nakumi-term.desktop
live-build-config/config/package-lists/: nakumi.list.chroot
nakumi-apps/nakumi-edit/: CMakeLists.txt
nakumi-apps/nakumi-edit/src/: editor.cpp  editor.h  linenumberarea.cpp  linenumberarea.h  main.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h
nakumi-apps/nakumi-files/: CMakeLists.txt  qml.qrc
nakumi-apps/nakumi-files/qml/: FileManager.qml
nakumi-apps/nakumi-files/src/: filemanager.cpp  filemanager.h  main.cpp  mountmanager.cpp  mountmanager.h
nakumi-apps/nakumi-settings/: CMakeLists.txt  qml.qrc
nakumi-apps/nakumi-settings/qml/: Settings.qml
nakumi-apps/nakumi-settings/src/: main.cpp  settingsmanager.cpp  settingsmanager.h
nakumi-apps/nakumi-term/: CMakeLists.txt  qml.qrc
nakumi-apps/nakumi-term/qml/: Terminal.qml
nakumi-apps/nakumi-term/src/: ansiparser.cpp  ansiparser.h  main.cpp  terminalbackend.cpp  terminalbackend.h
nakumi-de/launcher/: CMakeLists.txt
nakumi-de/launcher/qml/: Launcher.qml  qml.qrc
nakumi-de/launcher/src/: appmodel.cpp  appmodel.h  main.cpp
nakumi-de/panel/: CMakeLists.txt  qml.qrc
nakumi-de/panel/qml/: Panel.qml
nakumi-de/panel/src/: layershellwindow.cpp  layershellwindow.h  main.cpp  panelcontroller.cpp  panelcontroller.h  systemtray.cpp  systemtray.h  taskmanager.cpp  taskmanager.h
nakumi-wm/: meson.build
nakumi-wm/protocols/: wlr-layer-shell-unstable-v1.xml
nakumi-wm/src/: main.c
scripts/: build.sh
src/apps/filemanager/: CMakeLists.txt  filemanagercontroller.cpp  filemanagercontroller.h  main.cpp  org.nakumios.files.desktop.in
src/apps/filemanager/qml/: FileItem.qml  Main.qml  PathBar.qml  Sidebar.qml
src/apps/settings/: CMakeLists.txt  main.cpp  org.nakumios.settings.desktop.in  settingscontroller.cpp  settingscontroller.h
src/apps/settings/qml/: Main.qml  SettingsPage.qml
src/apps/settings/qml/pages/: AboutPage.qml  AppearancePage.qml  DisplayPage.qml  NetworkPage.qml  SoundPage.qml
src/apps/terminal/: CMakeLists.txt  main.cpp  org.nakumios.terminal.desktop.in  terminalcontroller.cpp  terminalcontroller.h
src/apps/terminal/qml/: Main.qml  TerminalView.qml
src/common/: CMakeLists.txt  designtokens.cpp  designtokens.h  systeminfo.cpp  systeminfo.h
src/compositor/: CMakeLists.txt  compositor.cpp  compositor.h  main.cpp  windowmanager.cpp  windowmanager.h
src/services/: CMakeLists.txt  notificationservice.cpp  notificationservice.h  sessionmanager.cpp  sessionmanager.h
src/shell/: CMakeLists.txt  main.cpp  shellcontroller.cpp  shellcontroller.h
src/shell/qml/: Main.qml
src/shell/qml/components/: BlurPanel.qml  Clock.qml  IconButton.qml  SystemTrayItem.qml  WindowButton.qml
src/shell/qml/launcher/: AppGrid.qml  AppIcon.qml  AppLauncher.qml
src/shell/qml/panels/: Dock.qml  TopPanel.qml
tests/: CMakeLists.txt  test_ansiparser.cpp  test_filemanager.cpp
